--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "hardhat": "^2.10.2"
+    "hardhat": "^2.10.2",
+    "es-main": "^1.2.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
