--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "hardhat": "^2.10.2",
-    "es-main": "^1.2.0"
+    "es-main": "^1.2.0",
+    "hardhat": "^2.10.2"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
+    "@zoralabs/v3": "^1.0.13",
     "dotenv": "^16.0.1"
   }
 }
